--- a/form-request.html
+++ b/form-request.html
@@ -7,115 +7,89 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
-  /* === STYLE MODERN REVISI === */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    background: linear-gradient(135deg, #9face6, #74ebd5);
-    padding: 40px 15px;
+    align-items: center;
+    background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+    padding: 20px;
   }
-
   .container {
-    background: #fff;
-    padding: 35px 28px;
-    border-radius: 18px;
-    box-shadow: 0 8px 28px rgba(0,0,0,0.12);
-    width: 540px;
-    max-width: 100%;
+    background: rgba(255, 255, 255, 0.92);
+    padding: 40px 35px;
+    border-radius: 20px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.12);
+    width: 520px;
+    max-width: 95%;
     backdrop-filter: blur(6px);
-    animation: fadeIn 0.7s ease;
-    position: relative;
-    border-top: 6px solid #3F51B5;
+    animation: fadeIn 0.6s ease-in-out;
+    border: 1px solid rgba(0,0,0,0.04);
   }
-
-  header {
+  h2 {
     text-align: center;
-    margin-bottom: 25px;
-  }
-  header img {
-    width: 65px;
-    margin-bottom: 8px;
-  }
-  header h2 {
-    font-size: 22px;
+    margin-bottom: 28px;
+    font-size: 26px;
     font-weight: 700;
-    margin: 0;
     background: linear-gradient(90deg, #673AB7, #3F51B5);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    letter-spacing: 0.6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
   }
-  header p {
-    font-size: 13px;
-    color: #555;
-    margin-top: 4px;
-  }
-
   .readonly-group {
-    border-bottom: 1px dashed #e0e0e0;
-    padding-bottom: 14px;
+    border-bottom: 1px dashed #e6e6e6;
+    padding-bottom: 12px;
     margin-bottom: 22px;
   }
-
   label {
     display: block;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
     font-size: 14px;
     font-weight: 600;
-    color: #333;
+    color: #444;
   }
-
-  .input-group {
-    position: relative;
-    margin-bottom: 15px;
-  }
+  .input-group { position: relative; margin-bottom: 16px; }
   input, select {
     width: 100%;
-    padding: 12px 14px 12px 44px;
-    border: 1px solid #ddd;
+    padding: 12px 14px 12px 42px;
+    border: 1px solid #e0e0e0;
     border-radius: 12px;
     font-size: 15px;
-    background-color: #fdfdfd;
-    box-sizing: border-box;
-    transition: 0.25s;
+    background-color: #fbfbfb;
+    transition: all 0.25s ease;
   }
-
   .input-icon {
     position: absolute;
     top: 50%;
     left: 14px;
     transform: translateY(-50%);
     font-size: 17px;
-    color: #3F51B5;
+    background: linear-gradient(135deg, #3F51B5, #2196F3);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     pointer-events: none;
   }
-
-  input:hover, select:hover {
-    border-color: #bbb;
-    background-color: #fff;
-  }
+  input:hover, select:hover { background-color: #fff; }
   input:focus, select:focus {
     border-color: #3f51b5;
-    box-shadow: 0 0 8px rgba(63,81,181,0.25);
+    box-shadow: 0 0 8px rgba(63,81,181,0.18);
     background-color: #fff;
     outline: none;
   }
-
   input[readonly] {
-    background-color: #f6f6f6;
-    cursor: default;
+    background-color: #f7f7f7;
     border-style: dashed;
-    color: #444;
+    border-color: #ececec;
   }
-
   button[type="submit"] {
     width: 100%;
-    padding: 14px;
-    margin-top: 22px;
+    padding: 15px;
+    margin-top: 25px;
     font-size: 16px;
     font-weight: 700;
     border: none;
@@ -123,61 +97,49 @@
     cursor: pointer;
     background: linear-gradient(90deg, #2196F3, #673AB7);
     color: #fff;
-    box-shadow: 0 8px 18px rgba(63,81,181,0.25);
+    box-shadow: 0 8px 18px rgba(103, 58, 183, 0.25);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    transition: all 0.3s ease;
+    transition: all 0.25s ease;
   }
   button[type="submit"]:hover:not(:disabled) {
-    transform: translateY(-2px);
-    box-shadow: 0 12px 24px rgba(63,81,181,0.35);
+    transform: translateY(-3px) scale(1.01);
+    box-shadow: 0 12px 25px rgba(103, 58, 183, 0.34);
   }
-
   #status {
-    margin-top: 16px;
+    margin-top: 18px;
     text-align: center;
     font-size: 14px;
-    font-weight: 500;
-    min-height: 26px;
+    min-height: 28px;
     padding: 8px;
     border-radius: 10px;
-    transition: all 0.25s ease;
   }
   .success { color: #155724; background: #e8f5e9; border: 1px solid #c8e6c9; }
   .error   { color: #b71c1c; background: #ffebee; border: 1px solid #ffcdd2; }
-
   #footer {
     font-size: 13px;
     text-align: center;
-    margin-top: 26px;
+    margin-top: 30px;
     line-height: 1.5;
     padding: 12px 14px;
     border-radius: 12px;
-    background: #f9f9f9;
   }
-  #footer.deadline-passed { font-weight: bold; }
-
   @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(-10px); }
+    from { opacity: 0; transform: translateY(-15px); }
     to   { opacity: 1; transform: translateY(0); }
   }
-
   @media (max-width: 520px) {
-    .container { padding: 25px; }
-    header h2 { font-size: 18px; }
+    .container { padding: 24px; }
+    h2 { font-size: 20px; }
   }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <header>
-    <img src="https://cdn-icons-png.flaticon.com/512/747/747310.png" alt="Logo">
-    <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
-    <p>Silakan isi form di bawah ini sesuai data Anda</p>
-  </header>
+  <h2 id="header-text"><i class="fas fa-calendar-alt"></i> REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
 
   <form id="requestForm">
     <div class="readonly-group">
@@ -186,13 +148,11 @@
         <i class="input-icon fas fa-id-card"></i>
         <input type="text" id="nik" name="nik" readonly>
       </div>
-
       <label>Nama</label>
       <div class="input-group">
         <i class="input-icon fas fa-user"></i>
         <input type="text" id="nama" name="nama" readonly>
       </div>
-
       <label>Group</label>
       <div class="input-group">
         <i class="input-icon fas fa-users"></i>
@@ -200,25 +160,25 @@
       </div>
     </div>
 
-    <label>Request Libur (Pilih Tanggal)</label>
+    <label>Request Libur</label>
     <div class="input-group">
       <i class="input-icon far fa-calendar-check"></i>
-      <input type="text" id="libur" name="libur" placeholder="Klik untuk memilih tanggal libur" readonly>
+      <input type="text" id="libur" name="libur" placeholder="Klik untuk pilih tanggal" readonly>
     </div>
 
-    <label>Request Cuti (Pilih Tanggal)</label>
+    <label>Request Cuti</label>
     <div class="input-group">
       <i class="input-icon fas fa-umbrella-beach"></i>
-      <input type="text" id="cuti" name="cuti" placeholder="Klik untuk memilih tanggal cuti" readonly>
+      <input type="text" id="cuti" name="cuti" placeholder="Klik untuk pilih tanggal" readonly>
     </div>
 
     <label>Request Lainnya</label>
     <div class="input-group">
       <i class="input-icon fas fa-comment-dots"></i>
-      <input type="text" id="requestLainnya" name="requestLainnya" placeholder="Jawaban singkat, maks 80 karakter" maxlength="80">
+      <input type="text" id="requestLainnya" name="requestLainnya" maxlength="80" placeholder="Jawaban singkat">
     </div>
 
-    <label>Ekstrakulikuler yang diikuti</label>
+    <label>Ekstrakurikuler</label>
     <div class="input-group">
       <i class="input-icon fas fa-futbol"></i>
       <select id="ekstrakulikuler" name="ekstrakulikuler" required>
@@ -236,10 +196,99 @@
   </form>
 </div>
 
-<!-- SCRIPT ASLI ANDA TETAP -->
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-  /* --- semua script asli Anda tetap, hanya styling di atas yang dipoles --- */
+const scriptURL = "https://script.google.com/macros/s/AKfycbyrVWiH3HUNiNwdWR-AshygBO1yHv4ltdNeUgkcJS5ZyrBJsILxjRFjTd-YzXNTSUtF/exec";
+
+const monthNames = ["Januari","Februari","Maret","April","Mei","Juni",
+                    "Juli","Agustus","September","Oktober","November","Desember"];
+
+function getDeadline() {
+  const now = new Date();
+  const startDate = new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0);
+  const expiredDate = new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59);
+  return { startDate, expiredDate };
+}
+
+function updateHeaderAndFooter() {
+  const today = new Date();
+  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+  const nextMonthName = monthNames[nextMonth.getMonth()];
+  const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
+  document.getElementById('header-text').innerHTML = `<i class="fas fa-calendar-alt"></i> ${headerText}`;
+  document.getElementById('page-title').textContent = headerText;
+
+  const { startDate, expiredDate } = getDeadline();
+  const footerElement = document.getElementById('footer');
+
+  if (today < startDate) {
+    footerElement.innerHTML = `<i class="fas fa-hourglass-start"></i> Input dibuka ${startDate.toLocaleString('id-ID')}`;
+    footerElement.style.background = '#fff3cd'; footerElement.style.color = '#856404';
+  } else if (today > expiredDate) {
+    footerElement.innerHTML = `<i class="fas fa-exclamation-triangle"></i> Deadline sudah lewat (${expiredDate.toLocaleString('id-ID')})`;
+    footerElement.style.background = '#ffebee'; footerElement.style.color = '#b71c1c';
+  } else {
+    const timeRemaining = expiredDate - today;
+    const days = Math.floor(timeRemaining / (1000*60*60*24));
+    footerElement.innerHTML = `<i class="fas fa-clock"></i> Deadline ${expiredDate.toLocaleString('id-ID')} (sisa ${days} hari)`;
+  }
+}
+
+function initDatepicker(selector) {
+  const today = new Date();
+  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+  new AirDatepicker(selector, {
+    multipleDates: true,
+    multipleDatesSeparator: ', ',
+    dateFormat: 'd-MM',
+    locale: { months: monthNames, daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'] },
+    startDate: nextMonth,
+    minDate: nextMonth,
+    maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth() + 1, 0),
+    position: 'bottom left',
+    readOnly: true
+  });
+}
+
+function checkDeadlineAndDisableForm() {
+  const now = new Date();
+  const { startDate, expiredDate } = getDeadline();
+  const form = document.getElementById("requestForm");
+  const submitButton = form.querySelector('button[type="submit"]');
+  if (now < startDate || now > expiredDate) {
+    form.querySelectorAll('input, select, button').forEach(el => el.disabled = true);
+    submitButton.innerHTML = `<i class="fas fa-lock"></i> INPUT TERTUTUP`;
+    return true;
+  }
+  return false;
+}
+
+function initializeApp() {
+  initDatepicker('#libur');
+  initDatepicker('#cuti');
+  checkDeadlineAndDisableForm();
+  updateHeaderAndFooter();
+}
+initializeApp();
+
+document.getElementById("requestForm").addEventListener("submit", function(e){
+  e.preventDefault();
+  if (checkDeadlineAndDisableForm()) return;
+  const status = document.getElementById("status");
+  status.textContent = "⏳ Mengirim data..."; status.className = "";
+
+  const formData = new FormData(this);
+  fetch(scriptURL, { method: "POST", body: formData })
+    .then(res => res.text())
+    .then(txt => {
+      if (txt.trim().startsWith("Sukses")) {
+        status.textContent = "✅ " + txt; status.className = "success";
+      } else {
+        status.textContent = "❌ " + txt; status.className = "error";
+      }
+    })
+    .catch(()=>{ status.textContent="❌ Gagal mengirim data!"; status.className="error"; });
+});
 </script>
 </body>
 </html>
