--- a/req-cuti.html
+++ b/req-cuti.html
@@ -2,220 +2,179 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title id="page-title">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-
+  <title>INPUT NIK SEBELUM REQUEST</title>
   <style>
-    /* gaya yang sama dengan versi Anda */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-      padding: 20px;
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
     }
+
     .container {
-      background: rgba(255, 255, 255, 0.92);
-      padding: 40px 35px;
-      border-radius: 20px;
-      box-shadow: 0 15px 35px rgba(0,0,0,0.12);
-      width: 520px;
-      max-width: 95%;
-      backdrop-filter: blur(6px);
-      animation: fadeIn 0.6s ease-in-out;
-      position: relative;
-      border: 1px solid rgba(0,0,0,0.04);
-    }
-    h2 {
+      background: #fff;
+      padding: 40px 50px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       text-align: center;
-      margin-bottom: 28px;
-      font-size: 26px;
-      font-weight: 700;
-      background: linear-gradient(90deg, #673AB7, #3F51B5);
+      width: 420px;
+      max-width: 95%;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+
+    .logo {
+      width: 100px;
+      margin-bottom: 15px;
+    }
+
+    h2 {
+      margin-bottom: 25px;
+      font-size: 22px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #2193b0, #6dd5ed);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
     }
-    .user-badge {
-      background: linear-gradient(90deg, #2196F3, #673AB7);
-      color: #fff;
-      padding: 12px 16px;
-      border-radius: 12px;
-      text-align: center;
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      text-align: left;
+      font-weight: bold;
+      color: #444;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
       margin-bottom: 20px;
-      font-size: 15px;
-      font-weight: 600;
-      box-shadow: 0 4px 12px rgba(103, 58, 183, 0.25);
+      box-sizing: border-box;
+      transition: border 0.3s;
     }
-    label { font-weight: 600; font-size: 14px; margin-bottom: 6px; display: block; color: #444; }
-    .input-group { position: relative; margin-bottom: 16px; }
-    input, select {
-      width: 100%; padding: 12px 14px 12px 42px;
-      border: 1px solid #e0e0e0; border-radius: 12px;
-      font-size: 15px; background-color: #fbfbfb;
-      transition: all .25s ease;
+
+    input:focus {
+      border-color: #2193b0;
+      outline: none;
+      box-shadow: 0 0 5px rgba(33, 147, 176, 0.5);
     }
-    .input-icon { position: absolute; top: 50%; left: 14px; transform: translateY(-50%);
-      font-size: 17px; background: linear-gradient(135deg, #3F51B5, #2196F3);
-      -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-    input[readonly] { background:#f7f7f7; border-style:dashed; cursor:default; }
-    button[type="submit"] {
-      width:100%; padding:15px; margin-top:25px;
-      font-size:16px; font-weight:700;
-      border:none; border-radius:14px;
-      background:linear-gradient(90deg, #2196F3, #673AB7);
-      color:#fff; box-shadow:0 8px 18px rgba(103,58,183,0.25);
-      display:flex; justify-content:center; align-items:center; gap:10px;
-      transition:all .25s ease; cursor:pointer;
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s;
     }
-    button[type="submit"]:hover:not(:disabled){ transform:translateY(-3px) scale(1.01); }
-    #status { margin-top:18px; text-align:center; font-size:14px; min-height:28px; }
-    .success { color:#155724; background:#e8f5e9; border:1px solid #c8e6c9; border-radius:10px; padding:8px; }
-    .error { color:#b71c1c; background:#ffebee; border:1px solid #ffcdd2; border-radius:10px; padding:8px; }
-    #footer { font-size:13px; text-align:center; margin-top:20px; }
-    @keyframes fadeIn { from{opacity:0;transform:translateY(-15px);} to{opacity:1;transform:translateY(0);} }
+
+    .btn-cek {
+      background: #2193b0;
+      color: #fff;
+    }
+
+    .btn-cek:hover {
+      background: #18657a;
+    }
+
+    .btn-form {
+      background: #28a745;
+      color: #fff;
+      display: none;
+    }
+
+    .btn-form:hover {
+      background: #1e7e34;
+    }
+
+    #hasil {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #333;
+      min-height: 30px;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
-<div class="container">
-  <h2 id="header-text"><i class="fas fa-calendar-alt"></i> REQUEST LIBUR / CUTI</h2>
-  <div id="userBadge" class="user-badge">👤 Sedang memuat data pengguna...</div>
 
-  <form id="requestForm">
-    <input type="hidden" id="nik" name="nik">
-    <input type="hidden" id="nama" name="nama">
-    <input type="hidden" id="group" name="group">
+  <div class="container">
+    <!-- Kalau ada logo, ganti src="LOGO.png" -->
+    <!-- <img src="LOGO.png" alt="Logo" class="logo"> -->
 
-    <label>Request Libur (Pilih Tanggal)</label>
-    <div class="input-group">
-      <i class="input-icon far fa-calendar-check"></i>
-      <input type="text" id="libur" name="libur" placeholder="Klik untuk memilih tanggal libur" readonly>
-    </div>
+    <h2>INPUT NIK SEBELUM REQUEST</h2>
 
-    <label>Request Cuti (Pilih Tanggal)</label>
-    <div class="input-group">
-      <i class="input-icon fas fa-umbrella-beach"></i>
-      <input type="text" id="cuti" name="cuti" placeholder="Klik untuk memilih tanggal cuti" readonly>
-    </div>
+    <label for="nik">Masukkan NIK:</label>
+    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
 
-    <label>Request Lainnya</label>
-    <div class="input-group">
-      <i class="input-icon fas fa-comment-dots"></i>
-      <input type="text" id="requestLainnya" name="requestLainnya" maxlength="80" placeholder="Jawaban singkat, maks 80 karakter">
-    </div>
+    <button class="btn-cek" onclick="cekNIK()">🔍 Cek Nama & Group</button>
 
-    <label>Ekstrakulikuler yang diikuti</label>
-    <div class="input-group">
-      <i class="input-icon fas fa-futbol"></i>
-      <select id="ekstrakulikuler" name="ekstrakulikuler" required>
-        <option value="">-- Pilih --</option>
-        <option value="FUTSAL">FUTSAL</option>
-        <option value="BADMINTON">BADMINTON</option>
-        <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
-        <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
-      </select>
-    </div>
+    <div id="hasil"></div>
 
-    <button type="submit"><i class="fas fa-paper-plane"></i> KIRIM REQUEST</button>
-    <div id="status"></div>
-    <div id="footer"></div>
-  </form>
-</div>
+    <button id="formCutiBtn" class="btn-form" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
+  </div>
 
-<script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-  const scriptURL = "https://script.google.com/macros/s/AKfycbzR5rqC-ll3MheqTzwP9CGchyfkOWM04qdUt7h565ty9J7gd4hSfH7ui2pwItInxCUPBQ/exec";
-  const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
+async function cekNIK() {
+  const nik = document.getElementById("nik").value.trim();
+  const hasil = document.getElementById("hasil");
+  const btnForm = document.getElementById("formCutiBtn");
 
-  // ambil query params dan isi field
-  window.addEventListener("DOMContentLoaded", () => {
-    const params = new URLSearchParams(window.location.search);
-    const nik = params.get("nik") || "";
-    const nama = params.get("nama") || "";
-    const group = params.get("group") || "";
+  if (!nik) {
+    hasil.innerText = "⚠️ Silakan masukkan NIK.";
+    btnForm.style.display = "none";
+    return;
+  }
 
-    document.getElementById("nik").value = nik;
-    document.getElementById("nama").value = nama;
-    document.getElementById("group").value = group;
+  hasil.innerText = "🔄 Mencari data...";
+  btnForm.style.display = "none";
 
-    const badge = document.getElementById("userBadge");
-    if(nik && nama && group){
-      badge.innerHTML = `👤 <b>${nama}</b> (NIK: ${nik}, Group: ${group})`;
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+    const data = await response.json();
+
+    if (data.nama && data.group) {
+      hasil.innerHTML = `
+        ✅ Nama: <strong>${data.nama}</strong><br>
+        📌 Group: <strong>${data.group}</strong>
+      `;
+      btnForm.style.display = "block";
+      btnForm.dataset.nama = data.nama;
+      btnForm.dataset.nik = nik;
+      btnForm.dataset.group = data.group;
     } else {
-      badge.innerHTML = `⚠️ Data pengguna tidak ditemukan. Pastikan masuk melalui halaman <b>Input NIK</b>.`;
-      badge.style.background = "#ffc107";
+      hasil.innerText = "❌ NIK tidak ditemukan di database.";
     }
-  });
-
-  // deadline & header
-  function getDeadline(){
-    const now = new Date();
-    return {
-      startDate: new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0),
-      expiredDate: new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59)
-    };
+  } catch (err) {
+    hasil.innerText = "❌ Gagal mengambil data.";
+    console.error(err);
   }
-  function updateHeaderAndFooter(){
-    const today = new Date();
-    const nextMonth = new Date(today.getFullYear(), today.getMonth()+1, 1);
-    const nextMonthName = monthNames[nextMonth.getMonth()];
-    document.getElementById("header-text").innerHTML =
-      `<i class="fas fa-calendar-alt"></i> REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
-    document.title = `REQUEST LIBUR / CUTI ${nextMonthName}`;
+}
 
-    const { startDate, expiredDate } = getDeadline();
-    const footer = document.getElementById("footer");
-    if(today < startDate){
-      footer.innerHTML = `<i class="fas fa-hourglass-start"></i> Input dibuka mulai ${startDate.getDate()} ${monthNames[startDate.getMonth()]} ${startDate.getHours()}:${String(startDate.getMinutes()).padStart(2,'0')}`;
-    } else if(today > expiredDate){
-      footer.innerHTML = `<i class="fas fa-exclamation-triangle"></i> Deadline sudah lewat.`;
-    } else {
-      footer.innerHTML = `<i class="fas fa-clock"></i> Deadline: ${expiredDate.getDate()} ${monthNames[expiredDate.getMonth()]} ${expiredDate.getHours()}:${String(expiredDate.getMinutes()).padStart(2,'0')}`;
-    }
-  }
-  updateHeaderAndFooter();
+function lanjutForm() {
+  const btn = document.getElementById("formCutiBtn");
+  const nama = encodeURIComponent(btn.dataset.nama);
+  const nik = encodeURIComponent(btn.dataset.nik);
+  const group = encodeURIComponent(btn.dataset.group);
 
-  // datepicker
-  function initDatepicker(sel){
-    new AirDatepicker(sel, {
-      multipleDates: true,
-      multipleDatesSeparator: ', ',
-      dateFormat: 'd-MM',
-      startDate: new Date(new Date().getFullYear(), new Date().getMonth()+1, 1),
-      minDate: new Date(new Date().getFullYear(), new Date().getMonth()+1, 1),
-      maxDate: new Date(new Date().getFullYear(), new Date().getMonth()+2, 0)
-    });
-  }
-  initDatepicker('#libur'); initDatepicker('#cuti');
+  const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
+  const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
 
-  // submit
-  document.getElementById("requestForm").addEventListener("submit", e=>{
-    e.preventDefault();
-    const status = document.getElementById("status");
-    status.textContent = "⏳ Mengirim...";
-    status.className = "";
-
-    const fd = new FormData(e.target);
-    fetch(scriptURL,{method:"POST",body:fd})
-      .then(r=>r.text())
-      .then(t=>{
-        if(t.trim().startsWith("Sukses")){
-          status.textContent = "✅ " + t.trim();
-          status.className = "success";
-        } else {
-          status.textContent = "❌ " + t.trim();
-          status.className = "error";
-        }
-      })
-      .catch(()=>{status.textContent="❌ Gagal kirim!"; status.className="error";});
-  });
+  window.location.href = prefillURL;
+}
 </script>
+
 </body>
 </html>
